# WebKit

./: .ccls  .clang-format  .clangd  .dir-locals.el  .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  .mailmap  .qmake.conf  .submitproject  .submitproject-tools  0001-Cherry-pick-r216459.-rdar-problem-32119857.patch  Android.mk  CMakeLists.txt  CMakePresets.json  ChangeLog  DerivedSources.pro  Dockerfile  Dockerfile.musl  Fingerprint-simulator-demo  GNUmakefile.am  Introduction.md  Losiento  Makefile  Makefile.shared  Metalapp-3  NPU  README.markdown  README.md  ReadMe.md  WebKit.pri  WebKit.pro  acinclude.m4  autogen.sh  cmakeconfig.h.cmake  common.pri  configure.ac  filenames  (+11 more)
JavaScriptCore/: .cvsignore  AllInOneFile.cpp  Android.mk  Android.v8.wtf.mk  CMakeLists.txt  CMakeListsEfl.txt  CMakeListsWinCE.txt  COPYING.LIB  ChangeLog  ChangeLog-2002-12-03  ChangeLog-2003-10-25  ChangeLog-2007-10-14  DerivedSources.make  DerivedSources.pro  GNUmakefile.am  Info.plist  JavaScriptCore.Debug.exp  JavaScriptCore.JSVALUE32_64only.exp  JavaScriptCore.JSVALUE32only.exp  JavaScriptCore.base.exp  JavaScriptCore.exp  JavaScriptCore.gypi  JavaScriptCore.order  JavaScriptCore.pri  JavaScriptCore.pro  JavaScriptCore.scons  JavaScriptCorePrefix.h  JavaScriptCoreSources.bkl  Makefile  Makefile.am  Makefile.vc  README  README-Win32.txt  SConstruct  THANKS  config.h  create_hash_table  create_jit_stubs  create_regex_tables  create_rvct_stubs  (+7 more)
JavaScriptCore/API/: APICast.h  APIShims.h  JSBase.cpp  JSBase.h  JSBasePrivate.h  JSCallbackConstructor.cpp  JSCallbackConstructor.h  JSCallbackFunction.cpp  JSCallbackFunction.h  JSCallbackObject.cpp  JSCallbackObject.h  JSCallbackObjectFunctions.h  JSCharBufferRef.cpp  JSCharBufferRef.h  JSClassRef.cpp  JSClassRef.h  JSContextRef.cpp  JSContextRef.h  JSInternalStringRef.cpp  JSInternalStringRef.h  JSNode.c  JSNode.h  JSNodeList.c  JSNodeList.h  JSObjectRef.cpp  JSObjectRef.h  JSObjectRefPrivate.h  JSProfilerPrivate.cpp  JSRetainPtr.h  JSStringBufferRef.cpp  JSStringBufferRef.h  JSStringRef.cpp  JSStringRef.h  JSStringRefBSTR.cpp  JSStringRefBSTR.h  JSStringRefCF.cpp  JSStringRefCF.h  JSStringRefCOM.cpp  JSStringRefCOM.h  JSValueRef.cpp  (+17 more)
JavaScriptCore/Configurations/: Base.xcconfig  DebugRelease.xcconfig  FeatureDefines.xcconfig  JavaScriptCore.xcconfig  Version.xcconfig
JavaScriptCore/English.lproj/: InfoPlist.strings
JavaScriptCore/JavaScriptCore.gyp/: JavaScriptCore.gyp
JavaScriptCore/JavaScriptCore.pbproj/: .cvsignore  project.pbxproj
JavaScriptCore/JavaScriptCore.vcproj/: JavaScriptCore.make  JavaScriptCore.sln  JavaScriptCoreSubmit.sln  debug_internal.vsprops  release.vsprops
JavaScriptCore/JavaScriptCore.xcodeproj/: ggaren.pbxuser  ggaren.perspective  project.pbxproj
JavaScriptCore/VM/: CTI.cpp  CTI.h  CodeBlock.cpp  CodeBlock.h  CodeGenerator.cpp  CodeGenerator.h  EvalCodeCache.h  ExceptionHelpers.cpp  ExceptionHelpers.h  Instruction.cpp  Instruction.h  JSPropertyNameIterator.cpp  JSPropertyNameIterator.h  LabelID.cpp  LabelID.h  Machine.cpp  Machine.h  Opcode.cpp  Opcode.h  Register.cpp  Register.h  RegisterFile.cpp  RegisterFile.h  RegisterFileStack.cpp  RegisterFileStack.h  RegisterID.cpp  RegisterID.h  SamplingTool.cpp  SamplingTool.h  SegmentedVector.h
JavaScriptCore/assembler/: ARMAssembler.cpp  ARMAssembler.h  ARMv7Assembler.cpp  ARMv7Assembler.h  AbstractMacroAssembler.h  AssemblerBuffer.h  AssemblerBufferWithConstantPool.h  CodeLocation.h  LinkBuffer.h  MIPSAssembler.h  MacroAssembler.h  MacroAssemblerARM.cpp  MacroAssemblerARM.h  MacroAssemblerARMv7.h  MacroAssemblerCodeRef.h  MacroAssemblerMIPS.h  MacroAssemblerX86.h  MacroAssemblerX86Common.h  MacroAssemblerX86_64.h  RepatchBuffer.h  (+1 more)
JavaScriptGlue/: ChangeLog  Info.plist  JSBase.cpp  JSBase.h  JSObject.cpp  JSObject.h  JSRun.cpp  JSRun.h  JSUtils.cpp  JSUtils.h  JSValueWrapper.cpp  JSValueWrapper.h  JavaScriptGlue.cpp  JavaScriptGlue.exp  JavaScriptGlue.h  LICENSE  Makefile.am  UserObjectImp.cpp  UserObjectImp.h  config.h
PerformanceTests/: .gitattributes  CMakeLists.txt  ChangeLog  ChangeLog-2018-01-01  Makefile.shared  Skipped
Source/: .gitignore  Android.mk  CMakeLists.txt  DerivedSources.pro  Makefile  PlatformEfl.cmake  PlatformGTK.cmake  PlatformHaiku.cmake  PlatformWPE.cmake  PlatformWin.cmake  QtWebKit.pro  WebKit.pri  WebKit.pro  api.pri  cmakeconfig.h.cmake  qtwebkit-export.map  qtwebkit.qdocconf  sync.profile  tests.pri  widgetsapi.pri
Tools/: .gitattributes  .gitignore  BuildSlaveSupport  CMakeLists.txt  CMakeListsEfl.txt  CMakeListsWinCE.txt  ChangeLog  ChangeLog-2019-06-05  ChangeLog-2020-04-10  ChangeLog-2021-03-18  DerivedSources.pro  GNUmakefile.am  Makefile  PlatformFTW.cmake  PlatformGTK.cmake  PlatformHaiku.cmake  PlatformMac.cmake  PlatformPlayStation.cmake  PlatformWPE.cmake  PlatformWin.cmake  Tools.gyp  Tools.pro  svn-config
WebCore/: .cvsignore  Android.derived.jscbindings.mk  Android.derived.mk  Android.derived.v8bindings.mk  Android.jscbindings.mk  Android.mk  Android.v8bindings.mk  CMakeLists.txt  CMakeListsEfl.txt  CMakeListsWinCE.txt  ChangeLog  ChangeLog-2002-12-03  ChangeLog-2003-10-25  ChangeLog-2005-08-23  ChangeLog-2005-12-19  ChangeLog-2006-05-10  ChangeLog-2006-12-31  ChangeLog-2007-10-14  ChangeLog-2008-08-10  ChangeLog-2009-06-16  ChangeLog-2010-01-29  ChangeLog-2010-05-24  DerivedSources.cpp  DerivedSources.make  DerivedSources.pro  GNUmakefile.am  Info.plist  JSCore.cpp  LICENSE  LICENSE-APPLE  LICENSE-LGPL-2  Makefile.am  Makefile.in  Makefile.rules.in  Makefile.vars.in  README  RenderView.cpp  SConstruct  WebCore-combined.exp  WebCore-svg.exp  (+57 more)
WebKit/: .cvsignore  API-Issues.rtf  CMakeLists.txt  CMakeListsEfl.txt  ChangeLog  ChangeLog-2002-12-03  ChangeLog-2007-10-14  IFWebCoreViewFactory.h  Info.plist  Makefile  Makefile.am  Makefile.in  MigrateHeaders.make  PublicHeaderChangesFromTiger.txt  StringsNotToBeLocalized.txt  WebKit-tests.exp  WebKit.LP64.exp  WebKit.exp  WebKit.order  WebKitPrefix.h  WebKitSecurityDummy.c  copy-webcore-files-to-webkit  embed-frameworks.sh  force-clean-timestamp
(+520573 files in other folders)
